--- a/css/base.css
+++ b/css/base.css
@@ -5,7 +5,9 @@
     * C O M E N T
     
     * HTML, BODY
-    *     html, body (background-image);
+    *     html, body;                   (background-image)
+    *         body::-webkit-scrollbar;  (scrollbar)
+    *         body;                     (scrollbar)
 
 \*  ========================================================================  */
 
@@ -21,3 +23,12 @@ html, body {
     background-size: cover;
     font-size:       14px;
 }
+
+    body::-webkit-scrollbar {        /* Hide scrollbar for Chrome, Safari and Opera */
+        display: none;  
+    }
+
+    body {                           /* Hide scrollbar for IE, Edge and Firefox */
+        -ms-overflow-style: none;    /* IE and Edge */
+        scrollbar-width:    none;    /* Firefox */
+    }
