--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,8 @@
     *     html, body;                   (background-image)
     *         body::-webkit-scrollbar;  (scrollbar)
     *         body;                     (scrollbar)
+    *     @media screen and (max-width: 1025px);
+    *     @media screen and (max-width: 1025px);
 
 \*  ========================================================================  */
 
@@ -17,11 +19,15 @@
 \*  ========================================================================  */
 
 html, body {
-    width:            100%;
-    height:           100%;
+    margin:           0 auto;
+    padding:          0 auto;
+    text-align:       center;
+
+    width:            min(1024px, 95vw);
+    height:           100vh;
+
     background:       url('../image/background.jpg') no-repeat center center fixed;
     background-size:  cover;
-    font-size:        14px;
 }
 
     body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
@@ -33,10 +39,49 @@ html, body {
         scrollbar-width:     none;    /* Firefox */
     }
 
+@media screen and (max-width: 1025px) {
+    html, body {
+        margin:           0 auto;
+        padding:          0 auto;
+        text-align:       center;
+    
+        width:            min(1024px, 95vw);
+        height:           100vh;
+    
+        background:       url('../image/background.jpg') no-repeat center center fixed;
+        background-size:  cover;
+    }
+    
+        body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
+            display:  none;  
+        }
+    
+        body {                            /* Hide scrollbar for IE, Edge and Firefox */
+            -ms-overflow-style:  none;    /* IE and Edge */
+            scrollbar-width:     none;    /* Firefox */
+        }
+}
+
 @media screen and (max-width: 768px) {
-    body {
+    html, body {
+        margin:           0 auto;
+        padding:          0 auto;
+        text-align:       center;
+    
         width:       100vw;   /* A viewport szélessége */
         height:      100vh;   /* A viewport magassága */
         overflow-x:  hidden;  /* Vízszintes görgetés letiltása */
+    
+        background:       url('../image/background.jpg') no-repeat center center fixed;
+        background-size:  cover;
     }
+    
+        body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
+            display:  none;  
+        }
+    
+        body {                            /* Hide scrollbar for IE, Edge and Firefox */
+            -ms-overflow-style:  none;    /* IE and Edge */
+            scrollbar-width:     none;    /* Firefox */
+        }
 }
