--- a/css/base.css
+++ b/css/base.css
@@ -23,10 +23,10 @@ html, body {
     padding:          0 auto;
     text-align:       center;
 
-    width:            min(1024px, 95vw);
-    height:           100vh;
+    width:            100%;
+    height:           100%;
 
-    background:       url('../image/background.jpg') no-repeat center center fixed;
+    background:       url('#') no-repeat center center fixed;
     background-size:  cover;
 }
 
@@ -38,50 +38,3 @@ html, body {
         -ms-overflow-style:  none;    /* IE and Edge */
         scrollbar-width:     none;    /* Firefox */
     }
-
-@media screen and (max-width: 1025px) {
-    html, body {
-        margin:           0 auto;
-        padding:          0 auto;
-        text-align:       center;
-    
-        width:            min(1024px, 95vw);
-        height:           100vh;
-    
-        background:       url('../image/background.jpg') no-repeat center center fixed;
-        background-size:  cover;
-    }
-    
-        body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
-            display:  none;  
-        }
-    
-        body {                            /* Hide scrollbar for IE, Edge and Firefox */
-            -ms-overflow-style:  none;    /* IE and Edge */
-            scrollbar-width:     none;    /* Firefox */
-        }
-}
-
-@media screen and (max-width: 768px) {
-    html, body {
-        margin:           0 auto;
-        padding:          0 auto;
-        text-align:       center;
-    
-        width:       100vw;   /* A viewport szélessége */
-        height:      100vh;   /* A viewport magassága */
-        overflow-x:  hidden;  /* Vízszintes görgetés letiltása */
-    
-        background:       url('../image/background.jpg') no-repeat center center fixed;
-        background-size:  cover;
-    }
-    
-        body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
-            display:  none;  
-        }
-    
-        body {                            /* Hide scrollbar for IE, Edge and Firefox */
-            -ms-overflow-style:  none;    /* IE and Edge */
-            scrollbar-width:     none;    /* Firefox */
-        }
-}
