--- a/css/components.css
+++ b/css/components.css
@@ -30,16 +30,11 @@ h1 {
 }
   
 h2,
-.contact{
+.contact {
     font-family:     'Raleway', cursive;
     font-weight:     bold;
     font-size:       clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
     letter-spacing:  0.25vw;
-}
-
-    .contact {
-        color:        rgba(255, 0, 0, .9);
-        text-shadow:  0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
 }
   
 p {
@@ -56,32 +51,52 @@ p {
 \*  ========================================================================  */
 
 img {
-    width:            20vw;
-    height:           20vw;
-    border-radius:    50%;
-    padding:          1px;
-    background-color: #666;
-    transition:       all 0.5s ease-in-out;
-    filter:           grayscale(50%);
+    width:             20vw;
+    height:            20vw;
+    border-radius:     50%;
+    padding:           1px;
+    background-color:  #666;
+    transition:        all 0.5s ease-in-out;
+    filter:            grayscale(75%);
 }
 
     img:hover {
-        transform: scale(1.4);
-        filter:    grayscale(20%);
+        transform:  scale(1.4);
+        filter:     grayscale(20%);
     }
 
 @media (max-width: 1025) {
     img {
-        width:  30vh;
-        height: 30vh;
+        width:             30vh;
+        height:            30vh;
+        border-radius:     50%;
+        padding:           1px;
+        background-color:  #666;
+        transition:        all 0.5s ease-in-out;
+        filter:            grayscale(75%);
     }
+    
+        img:hover {
+            transform:  scale(1.4);
+            filter:     grayscale(20%);
+        }
 }
 
 @media (max-width: 768px) {
     img {
-        width:  25vh;
-        height: 25vh;
+        width:             25vh;
+        height:            25vh;
+        border-radius:     50%;
+        padding:           1px;
+        background-color:  #666;
+        transition:        all 0.5s ease-in-out;
+        filter:            grayscale(75%);
     }
+    
+        img:hover {
+            transform:  scale(1.4);
+            filter:     grayscale(20%);
+        }
 }
 
 
@@ -90,30 +105,30 @@ img {
 \*  ========================================================================  */
 
 a {
-    font-family:     'Raleway', cursive;
-    text-decoration: none;
-    font-weight:     bold;
-    color:           rgba(255, 0, 0, .9);
-    text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-    font-size:       clamp(18px, 2vw, 30px);                                   /*  Mobil , Tablet , FHD  */
+    font-family:      'Raleway', cursive;
+    text-decoration:  none;
+    font-weight:      bold;
+    color:            rgba(0, 0, 0, .9);
+    /*text-shadow:      0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;*/
+    font-size:        clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
 }
 
     a:hover {
-        font-family:    'Raleway', cursive;
-        font-weight:    bold;
-        color:          rgba(255, 255, 0, 1);
-        text-shadow:    0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-        transition:     all 0.5s ease-in-out;
-        font-size:      clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
-        letter-spacing: 0.1vw;
+        font-family:     'Raleway', cursive;
+        font-weight:     bold;
+        color:           rgba(255, 255, 0, 0.75);
+        text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
+        transition:      all 0.5s ease-in-out;
+        font-size:       clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
+        letter-spacing:  0.1vw;
     }
 
     a:active {
-        font-family:    'Raleway', cursive;
-        font-weight:    bold;
-        color:          rgba(255, 255, 0, 1);
-        text-shadow:    0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-        font-size:      clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
-        letter-spacing: 0.1vw;
-        box-shadow:     hsla(0, 0%, 0%, .8) 0.5vw 0.5vw 2vw;
+        font-family:     'Raleway', cursive;
+        font-weight:     bold;
+        color:           rgba(255, 255, 0, 0.75);
+        text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
+        font-size:       clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
+        letter-spacing:  0.1vw;
+        box-shadow:      hsla(0, 0%, 0%, .8) 0.5vw 0.5vw 2vw;
     }
