Responsive Website Desing Refresh

--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@
 
 html, body {
     margin:           0 auto;
-    padding:          0 auto;
+    padding:          0vh 0vh 5vh 0vh;
     text-align:       center;
 
     width:            100%;
