--- a/css/components.css
+++ b/css/components.css
@@ -23,7 +23,7 @@
 h1 {
     font-family:     'Raleway', cursive;
     font-weight:     bold;
-    font-size:       6vh;
+    font-size:       clamp(36px, 6.66vh, 72px);  /*  Mobil , Tablet , FHD  */
     letter-spacing:  0.25vw;
 }
   
@@ -31,17 +31,50 @@ h2,
 .contact {
     font-family:     'Raleway', cursive;
     font-weight:     bold;
-    font-size:       clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
-    letter-spacing:  0.25vw;
+    font-size:       clamp(18px, 3.33vh, 36px);  /*  Mobil , Tablet , FHD  */
+    letter-spacing:  0.5vw;
 }
   
 p {
     font-family:     'Raleway', cursive;
     font-weight:     bold;
-    font-size:       clamp(12px, 1vw, 20px);      /*  Mobil , Tablet , FHD  */
-    line-height:     clamp(14.3px, 1.1vw, 22px);  /*  110%  */
+    font-size:       clamp(11px, 2.037vh, 22px);      /*  Mobil , Tablet , FHD  */
+    line-height:     clamp(13.2px, 2.44vh, 26.4px);  /*  110%  */
     letter-spacing:  0.1vw;
 }
+
+
+/*  ========================================================================  *\
+    R E F E R E N C E S
+\*  ========================================================================  */
+
+a, h3 {
+    font-family:      'Raleway', cursive;
+    text-decoration:  none;
+    font-weight:      bold;
+    color:            rgba(0, 0, 0, .9);
+    font-size:        clamp(16px, 2.963vh, 32px);  /*  Mobil , Tablet , FHD  */
+}
+
+    a:hover {
+        font-family:     'Raleway', cursive;
+        font-weight:     bold;
+        color:           rgba(255, 255, 0, 0.75);
+        text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
+        transition:      all 0.5s ease-in-out;
+        font-size:       clamp(18px, 3.33vh, 36px);  /*  Mobil , Tablet , FHD  */
+        letter-spacing:  0.1vw;
+    }
+
+    a:active {
+        font-family:     'Raleway', cursive;
+        font-weight:     bold;
+        color:           rgba(255, 255, 0, 0.75);
+        text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
+        font-size:       clamp(18px, 3.33vh, 36px);  /*  Mobil , Tablet , FHD  */
+        letter-spacing:  0.1vw;
+        box-shadow:      hsla(0, 0%, 0%, .8) 0.5vw 0.5vw 2vw;
+    }
 
 
 /*  ========================================================================  *\
@@ -54,7 +87,7 @@ img {
     border-radius:     50%;
     padding:           0.1vh;
     background-color:  rgba(0, 0, 0, 0.5);
-    transition:        all 0.5s ease-in-out;
+    transition:        all 1s ease-in-out;
     filter:            grayscale(80%);
 }
 
@@ -97,36 +130,3 @@ img {
             filter:     grayscale(20%);
         }
 }
-
-
-/*  ========================================================================  *\
-    R E F E R E N C E S
-\*  ========================================================================  */
-
-a {
-    font-family:      'Raleway', cursive;
-    text-decoration:  none;
-    font-weight:      bold;
-    color:            rgba(0, 0, 0, .9);
-    font-size:        clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
-}
-
-    a:hover {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
-        color:           rgba(255, 255, 0, 0.75);
-        text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-        transition:      all 0.5s ease-in-out;
-        font-size:       clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
-        letter-spacing:  0.1vw;
-    }
-
-    a:active {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
-        color:           rgba(255, 255, 0, 0.75);
-        text-shadow:     0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-        font-size:       clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
-        letter-spacing:  0.1vw;
-        box-shadow:      hsla(0, 0%, 0%, .8) 0.5vw 0.5vw 2vw;
-    }
