--- a/css/base.css
+++ b/css/base.css
@@ -18,15 +18,17 @@
 \*  ========================================================================  */
 
 html, body {
-    margin:           0 auto;
-    padding:          0vh 0vh 5vh 0vh;
-    text-align:       center;
-
     width:            100%;
     height:           100%;
+    margin:           0 auto;
+    padding:          0vh 0vh 5vh 0vh;
 
     background:       url('#') no-repeat center center fixed;
     background-size:  cover;
+
+    text-align:       center;
+
+    overflow-y:       auto;           /* Függőleges görgetés engedélyezése */
 }
 
     body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
@@ -57,7 +59,7 @@ html, body {
     }
     
         body::before {
-            content: "Kérlek, fordítsd vissza a telefont függőleges nézetbe!";
+            content: "Please turn the phone back to portrait view.";
             display: block;
             font-size: 24px;
             text-align: center;
