--- a/css/base.css
+++ b/css/base.css
@@ -61,11 +61,15 @@ html, body {
     }
     
         body::before {
-            content:     "Please turn the phone back to portrait view.";
-            display:     block;
+            content:           "Please turn the phone back to portrait view.";
+            display:           block;
 
-            font-size:   24px;
-            text-align:  center;
-            margin-top:  50vh;
+            width:             100%;
+            height:            100%;
+
+            background-color:  whitesmoke;
+
+            font-size:         24px;
+            text-align:        center;
         }
 }
