--- a/css/base.css
+++ b/css/base.css
@@ -2,74 +2,51 @@
 
     V M J  ~  B A S E . C S S
 
-    * C O M E N T
-    
-    * HTML, BODY
-    *     html, body;                   (background-image)
-    *         body::-webkit-scrollbar;  (scrollbar)
-    *         body;                     (scrollbar)
-    *     @media screen and...;
-
 \*  ========================================================================  */
-
 
 /*  ========================================================================  *\
     H T M L ,  B O D Y
 \*  ========================================================================  */
 
 html, body {
-    display:          block;
-    
-    width:            100%;
-    height:           100%;
-    margin:           0 auto;
-    padding:          0vh 0vh 5vh 0vh;
+    display:                grid;
+    grid-template-rows:     auto 1fr;
+    grid-template-columns:  auto;
+    grid-template-areas:    "header"
+                            "main";
 
-    background:       url('#') no-repeat center center fixed;
-    background-size:  cover;
+    margin:                 0 auto;
+    padding:                0 auto;
 
-    text-align:       center;
-
-    overflow-y:       auto;           /* Függőleges görgetés engedélyezése */
+    overflow-x:             hidden;
+    overflow-y:             hidden;
+    overflow:               scroll;
+    scrollbar-width:        none;
 }
 
-    body::-webkit-scrollbar {         /* Hide scrollbar for Chrome, Safari and Opera */
-        display:  none;  
+    body {
+        background:           url('#') no-repeat center center fixed;
+        background-size:      cover;
+        background-repeat:    no-repeat;
+        background-position:  left;
+
+        font-family:          'Raleway', cursive;
+        font-weight:          bold;
+        color:                darkcyan;
+        text-shadow:          0.138vh 0.138vh black;
     }
 
-    body {                            /* Hide scrollbar for IE, Edge and Firefox */
-        -ms-overflow-style:  none;    /* IE and Edge */
-        scrollbar-width:     none;    /* Firefox */
-    }
 
-    
 /*  ========================================================================  *\
-    H T M L ,  B O D Y  -  @ m e d i a
+    B A C K G R O U N D  C O L O R S
 \*  ========================================================================  */
 
-/*  Álló nézet stílusok  */
-@media screen and (orientation: portrait) {
-    body {
-        display:  block;
-    }
-}
-    
-/*  Fektetett nézet tiltása  */
-@media screen and (orientation: landscape) {
-    body {
-        display:  none;
-    }
-    
-        body::before {
-            content:           "Please turn the phone back to portrait view.";
-            display:           block;
+    body {background-color: white;}
 
-            width:             100%;
-            height:            100%;
+    /*header {background-color: blueviolet;}
+        .profile-image {background-color: brown;}
+        .social-media {background-color: aqua;}
+        .section-headline {background-color: chartreuse;}
+        .section {background-color: darkorange;}
 
-            background-color:  whitesmoke;
-
-            font-size:         24px;
-            text-align:        center;
-        }
-}
+    main {background-color: darkred;}
