--- a/css/components.css
+++ b/css/components.css
@@ -2,190 +2,70 @@
 
     V M J  ~  C O M P O N E N T S . C S S
 
-    * C O M E N T
-    
-    * FONTS
-    *     h1, h2 & contact, contact, p;
-    *
-    * IMAGE
-    *     img, img a:hover;
-    *
-    * REFERENCES
-    *     a, a:hover, a:active;
-
 \*  ========================================================================  */
-
 
 /*  ========================================================================  *\
     F O N T S
 \*  ========================================================================  */
 
 h1 {
-    font-family:     'Raleway', cursive;
-    font-weight:     bold;
-    font-size:       6.666vh;  /*  72px  */
-    letter-spacing:  0.463vh;
+    font-size:       6.666vh;  /*  48px  */
+    line-height:     6.666vh;  /*  100%  */
+    letter-spacing:  0.416vh;  /*  3px   */
+    text-shadow:     -0.277vh -0.277vh green, 0.277vh 0.277vh 0.277vh black;
 }
   
 h2,
 .contact {
-    font-family:     'Raleway', cursive;
-    font-weight:     bold;
-    font-size:       3.333vh;  /*  36px  */
-    letter-spacing:  0.185vh;
+    font-size:       3.333vh;  /*  24px  */
+    line-height:     3.333vh;  /*  125%  */
+    letter-spacing:  0.138vh;  /*  1px   */
+}
+
+h3 {
+    font-size:       2.777vh;  /*  20px  */
+    line-height:     2.777vh;  /*  125%  */
+    letter-spacing:  0.277vh;  /*  2px   */
 }
   
 p {
-    font-family:     'Raleway', cursive;
-    font-weight:     bold;
-    font-size:       2.037vh;  /*  22px  */
-    line-height:     2.240vh;  /*  110%  */
-    letter-spacing:  0.185vh;
+    font-size:       2.222vh;  /*  16px  */
+    line-height:     2.444vh;  /*  110%  */
+    letter-spacing:  0.138vh;  /*  1px   */
 }
 
-
-@media (max-width: 768px) {
-    h1 {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
-        font-size:       4.444vh;  /*  48px  */
-        letter-spacing:  0.463vh;
-    }
-      
-    h2,
-    .contact {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
-        font-size:       2.222vh;  /*  24px  */
-        letter-spacing:  0.185vh;
-    }
-      
-    p {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
-        font-size:       1.296vh;  /*  14px  */
-        line-height:     1.426vh;  /*  110%  */
-        letter-spacing:  0.185vh;
-    }    
-}
+    .left   {text-align: left;}
+    .center {text-align: center;}
+    .right  {text-align: right;}
 
 
 /*  ========================================================================  *\
     R E F E R E N C E S
 \*  ========================================================================  */
 
-a, h3 {
-    font-family:      'Raleway', cursive;
+a {
+    cursor:           pointer;
     text-decoration:  none;
-    font-weight:      bold;
-    color:            rgba(0, 0, 0, .9);
-    font-size:        2.777vh;  /* 30px */
+    font-size:        2.777vh;  /*  20px  */
+    line-height:      3.471vh;  /*  125%  */
+    letter-spacing:   0.277vh;     /*  2px   */
+    color:            darkcyan;
 }
 
     a:hover {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
+        font-size:       2.777vh;  /*  20px  */
+        letter-spacing:  0.416vh;  /*  3px   */
         color:           rgba(255, 255, 0, 0.75);
         text-shadow:     0.185vh 0.185vh rgba(0, 0, 0, 0.75), -0.185vh -0.185vh #444;
-        transition:      all 0.5s ease-in-out;
-        font-size:       2.777vh;  /* 30px */
-        letter-spacing:  0.185vh;
+
+        transition:      all 1s ease-in-out;
     }
 
     a:active {
-        font-family:     'Raleway', cursive;
-        font-weight:     bold;
+        font-size:       2.777vh;  /*  20px  */
+        letter-spacing:  0.416vh;  /*  3px   */
         color:           rgba(255, 255, 0, 0.75);
         text-shadow:     0.185vh 0.185vh rgba(0, 0, 0, 0.75), -0.185vh -0.185vh #444;
-        font-size:       2.777vh;  /* 30px */
-        letter-spacing:  0.185vh;
+
         box-shadow:      hsla(0, 0%, 0%, .8) 0.926vh 0.926vh 3.703vh;
     }
-
-    
-@media (max-width: 768px) {
-    a, h3 {
-        font-family:      'Raleway', cursive;
-        text-decoration:  none;
-        font-weight:      bold;
-        color:            rgba(0, 0, 0, .9);
-        font-size:        1.852vh;  /* 20px */
-    }
-    
-        a:hover {
-            font-family:     'Raleway', cursive;
-            font-weight:     bold;
-            color:           rgba(255, 255, 0, 0.75);
-            text-shadow:     0.185vh 0.185vh rgba(0, 0, 0, 0.75), -0.185vh -0.185vh #444;
-            transition:      all 0.5s ease-in-out;
-            font-size:       1.852vh;  /* 20px */
-            letter-spacing:  0.185vh;
-        }
-    
-        a:active {
-            font-family:     'Raleway', cursive;
-            font-weight:     bold;
-            color:           rgba(255, 255, 0, 0.75);
-            text-shadow:     0.185vh 0.185vh rgba(0, 0, 0, 0.75), -0.185vh -0.185vh #444;
-            font-size:       1.852vh;  /* 20px */
-            letter-spacing:  0.185vh;
-            box-shadow:      hsla(0, 0%, 0%, .8) 0.926vh 0.926vh 3.703vh;
-        }
-}
-
-
-/*  ========================================================================  *\
-    I M A G E
-\*  ========================================================================  */
-
-img {
-    width:             40vh;
-    height:            40vh;
-    border-radius:     50%;
-    padding:           0.1vh;
-    background-color:  rgba(0, 0, 0, 0.5);
-    transition:        all 1s ease-in-out;
-    filter:            grayscale(80%);
-}
-
-    img:hover {
-        transform:  scale(1.3);
-        filter:     grayscale(20%);
-    }
-
-
-@media (max-width: 1025) {
-    img {
-        width:             40vh;
-        height:            40vh;
-        border-radius:     50%;
-        padding:           0.1vh;
-        background-color:  rgba(0, 0, 0, 0.5);
-        transition:        all 0.5s ease-in-out;
-        filter:            grayscale(80%);
-    }
-    
-        img:hover {
-            transform:  scale(1.3);
-            filter:     grayscale(20%);
-        }
-}
-
-
-@media (max-width: 768px) {
-    img {
-        width:             30vh;
-        height:            30vh;
-        padding:           0.1vh;
-
-        border-radius:     50%;
-        background-color:  rgba(0, 0, 0, 0.5);
-        transition:        all 0.5s ease-in-out;
-        filter:            grayscale(80%);
-    }
-    
-        img:hover {
-            transform:  scale(1.3);
-            filter:     grayscale(20%);
-        }
-}
