--- a/css/layout.css
+++ b/css/layout.css
@@ -2,48 +2,7 @@
 
     V M J  ~  L A Y O U T . C S S
 
-    * C O M E N T
-    
-    * GRID-COUNTAINER
-    *
-    * HEADER
-    *     header:
-    *         profile-image;
-    *         section-headline:
-    *         section;
-    *     @media (max-width: 768px);
-    *
-    * MAIN
-    *     main:
-    *         student-countainer;
-    *         work-countainer;
-    *             student-item;
-    *             work-item;
-    *
-    * FOOTER
-    *     footer;
-    *         ul, li;
-    *         span;
-
 \*  ========================================================================  */
-
-
-/*  ========================================================================  *\
-    G R I D - C O N T A I N E R
-\*  ========================================================================  */
-
-.grid-container {
-    display:                grid;
-    grid-template-columns:  1fr;
-    grid-template-rows:     auto;
-    grid-template-areas: 
-        "header"
-        "main"
-        "footer";
-    width:                  min(1024px, 95vw);
-    height:                 auto;
-}
-
 
 /*  ========================================================================  *\
     H E A D E R
@@ -51,127 +10,114 @@
 
 header {
     grid-area:      header;
+    position:       relative;
 
-    display:        table;
-    text-align:     center;
+    width:          60vw;
+    height:         66vh;
+    margin-top:     28vh;
+    margin-bottom:  5vh;
+    padding:        0 auto;
 
-    width:          auto;
-    height:         75vh;
-    margin-top:     25vh;
-    padding:        0vh 5vh 0vh 5vh;
+    background-color:  lime;
 
-    border-top:     0.2vh solid rgba(0, 0, 0, 0.5);
-    border-radius:  25vh 0vh 0vh 0vh;
+    border-top:     0.555vh solid rgba(0, 0, 0, 0.5);  /*  4px  */
+    border-bottom:  0.555vh solid rgba(0, 0, 0, 0.5);  /*  4px  */
+    border-radius:  0vh 25vh 0vh 25vh;
 }
 
     .profile-image {
-        width:       auto;
+        position:    absolute;
+        top:         -20vh;
+        left:        10vh;
+
+        width:       40vh;
         height:      40vh;
-        margin-top:  -20vh;
-        padding:     2vh 0vh 2vh 0vh;
+        margin:      0 auto;
+        padding:     0 auto;
     }
 
-    .section-headline,
+        img {
+            width:             40vh;
+            height:            40vh;
+            border-radius:     50%;
+            padding:           0.1vh;
+            background-color:  rgba(0, 0, 0, 0.5);
+            transition:        all 1s ease-in-out;
+            filter:            grayscale(80%);
+        }
+
+        img:hover {
+            transform:  scale(1.3);      /*  130%  */
+            filter:     grayscale(20%);
+        }
+
+    .social-media {
+        position:        absolute;
+        top:             20vh;
+        left:            4vh;
+
+        width:           40vh;
+        height:          10vh;
+        padding:         2vh 2vh 2vh 2vh;
+        letter-spacing:  1vh;
+    }
+
+    .section-headline{
+        position:    absolute;
+        top:         0vh;
+        right:       4vh;
+
+        width:       35vw;
+        height:      30vh;
+        padding:     6vh 2vh 2vh 2vh;
+    }
+
     .section {
-        border-top:  0.2vh solid rgba(0, 0, 0, 0.5);
-        padding:     2vh 0vh 2vh 0vh;
-    }
+        position:       absolute;
+        top:            30vh;
+        left:           4vh;
+        right:          4vh;
 
-@media (max-width: 768px) {
-    header {
-        grid-area:      header;
-
-        display:        table;
-        text-align:     center;
-            
         width:          auto;
-        height:         75vh;
-        margin-top:     25vh;
-        padding:        0vh 5vh 0vh 5vh;
-            
+        height:         auto;
+        padding:        4vh 2vh 6vh 2vh;
+
         border-top:     0.2vh solid rgba(0, 0, 0, 0.5);
-        border-radius:  15vh 0vh 0vh 0vh;
     }
-    
-        .profile-image {
-            width:       auto;
-            height:      30vh;
-            margin-top:  -20vh;
-            padding:     2vh 0vh 2vh 0vh;
-        }
-    
-        .section-headline,
-        .section {
-            border-top:  0.2vh solid rgba(0, 0, 0, 0.5);
-            padding:     2vh 0vh 2vh 0vh;
-        }
-}
+
 
 /*  ========================================================================  *\
     M A I N
 \*  ========================================================================  */
 
 main {
-    grid-area:         main;
+    grid-area:  main;
+
+    width:      60vw;
+    height:     auto;
+    margin:     0 auto;
+    padding:    2vh 2vh 6vh 2vh;
 }
 
-    .student-countainer,
-    .work-countainer {
-        display:     flex;
-        flex-wrap:   wrap;
-        gap:         4vh 2vh;  /* row-gap column-gap */
-
-        border-top:  0.2vh solid rgba(0, 0, 0, 0.5);
-        padding:     5vh 0vh 5vh 0vh;
+    .student-item, 
+    .work-item {
+        width:    100%;
+        height:   auto;
+        margin:   0 auto;
+        padding:  0vh 2vh 0vh 2vh;
     }
-
-    .student-countainer {
-        flex-direction:  row-reverse;
-        margin:          0vh 5vh 0vh 5vh;
-    }
-
-    .work-countainer {
-        flex-direction:  row;
-        margin:          0vh 5vh 0vh 5vh;
-    }
-
-        .student-item,
-        .work-item {
-            /*background-color:  rgba(0, 0, 0, 0.05);*/
-            background-image:   url('../image/button.jpg');
-            background-repeat:  no-repeat;
-            background-size:    cover;
-            text-align:         center;
-            border:             1px solid rgba(0, 0, 0, 0.8);
-            border-radius:      0vh 5vh 0vh 5vh;
-            padding:            0.5vh 5vh 0.5vh 5vh;
-        }
-
-        .student-item:hover,
-        .work-item:hover {
-            box-shadow:  rgba(0, 0, 0, 0.8) 1vh 1vh 2vh;
-            transition:  all 0.5s ease-out;
-        }
 
 
 /*  ========================================================================  *\
-    F O O T E R
+    @ M E D I A  Q U E R I E S  ~  7 6 8 p x
 \*  ========================================================================  */
 
-footer {
-    grid-area:      footer;
-
-    border-bottom:  0.2vh solid rgba(0, 0, 0, 0.5);
-    border-radius:  0vh 0vh 12vh 0vh;
-}
-
-    .footer {
-        border-top:  0.2vh solid rgba(0, 0, 0, 0.5);
-        margin:      0vh 5vh 0vh 5vh;
-        padding:     2vh 0vh 2vh 0vh;
+@media (max-width: 768px) {
+    header {
+        width:  100vw;
     }
 
-        ul, li {
-            display:         inline;
-            letter-spacing:  0.5rem;
-        }
+    main {
+        width:  100vw;
+    }
+}
