--- a/css/base.css
+++ b/css/base.css
@@ -50,3 +50,5 @@ html, body {
         .section {background-color: darkorange;}
 
     main {background-color: darkred;}
+        .student-countainer, .work-countainer {background-color: green;}
+        .student-item, .work-item {background-color: deeppink;}
