Responsive Website - Mobil Size

--- a/css/base.css
+++ b/css/base.css
@@ -13,7 +13,8 @@ html, body {
     grid-template-rows:     auto 1fr;
     grid-template-columns:  auto;
     grid-template-areas:    "header"
-                            "main";
+                            "main"
+                            "aside";
 
     margin:                 0 auto;
     padding:                0 auto;
@@ -50,3 +51,5 @@ html, body {
         .section {background-color: darkorange;}
 
     main {background-color: darkred;}
+        .student-countainer, .work-countainer {background-color: green;}
+        .student-item, .work-item {background-color: deeppink;}
