Responsive Website - Mobil Size

--- a/css/base.css
+++ b/css/base.css
@@ -44,7 +44,7 @@ html, body {
 
     body {background-color: white;}
 
-    /*header {background-color: blueviolet;}
+    header {background-color: blueviolet;}
         .profile-image {background-color: brown;}
         .social-media {background-color: aqua;}
         .section-headline {background-color: chartreuse;}
