--- a/css/layout.css
+++ b/css/layout.css
@@ -136,10 +136,10 @@ main, aside {
         position:       relative;
     
         width:          auto;
-        height:         75vh;
+        height:         70vh;
         margin-top:     19vh;
         margin-right:   2vh;
-        margin-bottom:  6vh;
+        margin-bottom:  11vh;
         margin-left:    2vh;
         padding:        0 auto;
     
@@ -180,7 +180,7 @@ main, aside {
             right:           4vh;
     
             width:           auto;
-            height:          5vh;
+            height:          auto;
             padding:         2vh 2vh 2vh 2vh;
             letter-spacing:  1vh;
 
@@ -194,7 +194,7 @@ main, aside {
             left:        4vh;
     
             width:       auto;
-            height:      30vh;
+            height:      auto;
             padding:     2vh 0vh 2vh 0vh;
         }
     
@@ -226,9 +226,10 @@ main, aside {
         height:         auto;
         margin-top:     0vh;
         margin-right:   2vh;
-        margin-bottom:  6vh;
+        margin-bottom:  11vh;
         margin-left:    2vh;
         padding:        2vh 2vh 6vh 2vh;
+
         border-top:     0.555vh solid rgba(0, 0, 0, 0.625);  /*  4px  */
         border-bottom:  0.555vh solid rgba(0, 0, 0, 0.625);  /*  4px  */
     }
